# CompilerPrincipleProject

./: .gitignore  README.md
LexemeDict/: adjective.txt  adverb.txt  intrans_verb.txt  lexemedict.py  noun.txt  preposition.txt  sentences.txt  trans_verb.txt
cpp/: CMakeLists.txt  README.md  brain.cc  brain.h  brain_test.cc  brain_util.h  lexemeDict.h  parser.cc  parser.h  parser_kjxbackup.cc  parser_test.cc  tempCodeRunnerFile.cc
cpp/corpora/: data1.py  data2.py
cpp/performance/: CMakeLists.txt  performance_test.cc
cpp/src/: brain.cc  brain.h  lexemeDict.h  parser.cc  parser_util.h
cpp/test/: CMakeLists.txt  dependency.h  parser_test.cc
cpp/words/: adjective.txt  adverb.txt  copula.txt  dependency.txt  lexemedict.py  noun.txt  preposition.txt  sentences.txt
docs/: README.md
python/: brain.py  parser.py
src/: CMakeLists.txt  README.md  info.md
